--- a/testEnv.ipynb
+++ b/testEnv.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example of dataloader usage. Skin segmentation still a working progress."
+    "Example of dataloader usage. Unsure of how to load skin segmentation data at this time."
    ]
   },
   {
