--- a/face_detection/yolov8-demo.ipynb
+++ b/face_detection/yolov8-demo.ipynb
@@ -13,6 +13,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We test the pretrained face model from: https://github.com/akanametov/yolov8-face\n",
+    "\n",
+    "Download the model and place it in a folder:\n",
+    "```pretrained_models```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
