--- a/face_detection/yolov8-demo.ipynb
+++ b/face_detection/yolov8-demo.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,6 +99,61 @@
     "    #im.show()  # show image\n",
     "    # im.save('results.jpg')  # save image\n",
     "    display(im)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ultralytics YOLOv8.0.196  Python-3.10.8 torch-2.1.0+cu118 CPU (Intel Core(TM) i5-9300H 2.40GHz)\n",
+      "Model summary (fused): 168 layers, 3005843 parameters, 0 gradients, 8.1 GFLOPs\n",
+      "\n",
+      "\u001b[34m\u001b[1mPyTorch:\u001b[0m starting from 'pretrained_models\\yolov8n-face.pt' with input shape (1, 3, 640, 640) BCHW and output shape(s) (1, 5, 8400) (6.0 MB)\n",
+      "\u001b[31m\u001b[1mrequirements:\u001b[0m Ultralytics requirement ['onnx>=1.12.0'] not found, attempting AutoUpdate...\n",
+      "Collecting onnx>=1.12.0\n",
+      "  Downloading onnx-1.14.1-cp310-cp310-win_amd64.whl (13.3 MB)\n",
+      "     --------------------------------------- 13.3/13.3 MB 65.5 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: typing-extensions>=3.6.2.1 in d:\\programming\\cybertruck\\face_detection\\venv\\lib\\site-packages (from onnx>=1.12.0) (4.4.0)\n",
+      "Requirement already satisfied: numpy in d:\\programming\\cybertruck\\face_detection\\venv\\lib\\site-packages (from onnx>=1.12.0) (1.24.1)\n",
+      "Collecting protobuf>=3.20.2\n",
+      "  Downloading protobuf-4.24.4-cp310-abi3-win_amd64.whl (430 kB)\n",
+      "     ------------------------------------- 430.5/430.5 kB 28.0 MB/s eta 0:00:00\n",
+      "Installing collected packages: protobuf, onnx\n",
+      "Successfully installed onnx-1.14.1 protobuf-4.24.4\n",
+      "\n",
+      "\u001b[31m\u001b[1mrequirements:\u001b[0m AutoUpdate success  26.6s, installed 1 package: ['onnx>=1.12.0']\n",
+      "\u001b[31m\u001b[1mrequirements:\u001b[0m  \u001b[1mRestart runtime or rerun command for updates to take effect\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[34m\u001b[1mONNX:\u001b[0m starting export with onnx 1.14.1 opset 17...\n",
+      "\u001b[34m\u001b[1mONNX:\u001b[0m export success  30.1s, saved as 'pretrained_models\\yolov8n-face.onnx' (11.7 MB)\n",
+      "\n",
+      "Export complete (34.0s)\n",
+      "Results saved to \u001b[1mD:\\Programming\\cybertruck\\face_detection\\pretrained_models\u001b[0m\n",
+      "Predict:         yolo predict task=detect model=pretrained_models\\yolov8n-face.onnx imgsz=640  \n",
+      "Validate:        yolo val task=detect model=pretrained_models\\yolov8n-face.onnx imgsz=640 data=datasets/data.yaml  \n",
+      "Visualize:       https://netron.app\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'pretrained_models\\\\yolov8n-face.onnx'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Export the model\n",
+    "model.export(format='onnx')"
    ]
   }
  ],
