--- a/testEnv.ipynb
+++ b/testEnv.ipynb
@@ -181,6 +181,144 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SqueezeNet(\n",
+       "  (features): Sequential(\n",
+       "    (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(2, 2))\n",
+       "    (1): ReLU(inplace=True)\n",
+       "    (2): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=True)\n",
+       "    (3): Fire(\n",
+       "      (squeeze): Conv2d(64, 16, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (squeeze_activation): ReLU(inplace=True)\n",
+       "      (expand1x1): Conv2d(16, 64, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (expand1x1_activation): ReLU(inplace=True)\n",
+       "      (expand3x3): Conv2d(16, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (expand3x3_activation): ReLU(inplace=True)\n",
+       "    )\n",
+       "    (4): Fire(\n",
+       "      (squeeze): Conv2d(128, 16, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (squeeze_activation): ReLU(inplace=True)\n",
+       "      (expand1x1): Conv2d(16, 64, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (expand1x1_activation): ReLU(inplace=True)\n",
+       "      (expand3x3): Conv2d(16, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (expand3x3_activation): ReLU(inplace=True)\n",
+       "    )\n",
+       "    (5): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=True)\n",
+       "    (6): Fire(\n",
+       "      (squeeze): Conv2d(128, 32, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (squeeze_activation): ReLU(inplace=True)\n",
+       "      (expand1x1): Conv2d(32, 128, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (expand1x1_activation): ReLU(inplace=True)\n",
+       "      (expand3x3): Conv2d(32, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (expand3x3_activation): ReLU(inplace=True)\n",
+       "    )\n",
+       "    (7): Fire(\n",
+       "      (squeeze): Conv2d(256, 32, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (squeeze_activation): ReLU(inplace=True)\n",
+       "      (expand1x1): Conv2d(32, 128, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (expand1x1_activation): ReLU(inplace=True)\n",
+       "      (expand3x3): Conv2d(32, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (expand3x3_activation): ReLU(inplace=True)\n",
+       "    )\n",
+       "    (8): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=True)\n",
+       "    (9): Fire(\n",
+       "      (squeeze): Conv2d(256, 48, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (squeeze_activation): ReLU(inplace=True)\n",
+       "      (expand1x1): Conv2d(48, 192, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (expand1x1_activation): ReLU(inplace=True)\n",
+       "      (expand3x3): Conv2d(48, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (expand3x3_activation): ReLU(inplace=True)\n",
+       "    )\n",
+       "    (10): Fire(\n",
+       "      (squeeze): Conv2d(384, 48, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (squeeze_activation): ReLU(inplace=True)\n",
+       "      (expand1x1): Conv2d(48, 192, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (expand1x1_activation): ReLU(inplace=True)\n",
+       "      (expand3x3): Conv2d(48, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (expand3x3_activation): ReLU(inplace=True)\n",
+       "    )\n",
+       "    (11): Fire(\n",
+       "      (squeeze): Conv2d(384, 64, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (squeeze_activation): ReLU(inplace=True)\n",
+       "      (expand1x1): Conv2d(64, 256, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (expand1x1_activation): ReLU(inplace=True)\n",
+       "      (expand3x3): Conv2d(64, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (expand3x3_activation): ReLU(inplace=True)\n",
+       "    )\n",
+       "    (12): Fire(\n",
+       "      (squeeze): Conv2d(512, 64, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (squeeze_activation): ReLU(inplace=True)\n",
+       "      (expand1x1): Conv2d(64, 256, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (expand1x1_activation): ReLU(inplace=True)\n",
+       "      (expand3x3): Conv2d(64, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (expand3x3_activation): ReLU(inplace=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (classifier): Sequential(\n",
+       "    (0): Dropout(p=0.5, inplace=False)\n",
+       "    (1): Conv2d(512, 1000, kernel_size=(1, 1), stride=(1, 1))\n",
+       "    (2): ReLU(inplace=True)\n",
+       "    (3): AdaptiveAvgPool2d(output_size=(1, 1))\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from torchvision.models import squeezenet1_1, SqueezeNet1_1_Weights\n",
+    "\n",
+    "from torchvision.models._api import WeightsEnum\n",
+    "from torch.hub import load_state_dict_from_url\n",
+    "import torch.nn as nn\n",
+    "import torch\n",
+    "\n",
+    "def get_state_dict(self, *args, **kwargs):\n",
+    "    kwargs.pop(\"check_hash\")\n",
+    "    return load_state_dict_from_url(self.url, *args, **kwargs)\n",
+    "\n",
+    "WeightsEnum.get_state_dict = get_state_dict\n",
+    "\n",
+    "model = squeezenet1_1(weights=SqueezeNet1_1_Weights.DEFAULT)\n",
+    "model\n",
+    "\n",
+    "# input = torch.randn(64, 3, 227, 227)\n",
+    "\n",
+    "# output = nn.Flatten()(feature_extractor(input))\n",
+    "\n",
+    "# output.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list(model.features.parameters()))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
