--- a/conversions/convert_to_onnx_to_tflite.ipynb
+++ b/conversions/convert_to_onnx_to_tflite.ipynb
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Developer\\Python310\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(\"D:\\Programming\\cybertruck\")\n",
@@ -29,29 +38,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Developer\\Python310\\lib\\site-packages\\timm\\models\\_factory.py:117: UserWarning: Mapping deprecated model name xception to current legacy_xception.\n",
+      "  model = create_fn(\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "raw_model = Raw_CNN(None).to('cuda')\n",
-    "x = torch.randn(5, 3, 229, 229).to('cuda')\n",
+    "x = torch.randn(5, 3, 299, 299).to('cuda')\n",
     "raw_model.load_state_dict(torch.load(r\"D:\\Programming\\cybertruck\\weights\\raw\\epoch20_11-27_16_15_10_76acc.pt\"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +86,7 @@
        "torch.Size([5, 10])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,13 +123,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From c:\\Developer\\Python310\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
       "WARNING:tensorflow:From c:\\Developer\\Python310\\lib\\site-packages\\tensorflow_probability\\python\\internal\\backend\\numpy\\_utils.py:48: The name tf.logging.TaskLevelStatusMessage is deprecated. Please use tf.compat.v1.logging.TaskLevelStatusMessage instead.\n",
       "\n",
       "WARNING:tensorflow:From c:\\Developer\\Python310\\lib\\site-packages\\tensorflow_probability\\python\\internal\\backend\\numpy\\_utils.py:48: The name tf.control_flow_v2_enabled is deprecated. Please use tf.compat.v1.control_flow_v2_enabled instead.\n",
@@ -189,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +217,7 @@
        "83265428"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,16 +249,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  1   3 229 229]\n",
-      "[[ 0.70486337  1.1734309  -0.31111112 -0.14354168 -1.9417019  -0.6325212\n",
-      "  -0.0252881   0.5548716   1.183073   -0.6819163 ]]\n"
+      "[  1   3 299 299]\n",
+      "[[ 0.20226912  0.71003246 -0.25777435 -0.03049688 -1.0173109  -0.30656993\n",
+      "  -0.00746293  0.36016852  0.60894096 -0.45594865]]\n"
      ]
     }
    ],
@@ -271,25 +290,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'name': 'serving_default_input:0', 'index': 0, 'shape': array([  5,   3, 229, 229]), 'shape_signature': array([ -1,   3, 229, 229]), 'dtype': <class 'numpy.float32'>, 'quantization': (0.0, 0), 'quantization_parameters': {'scales': array([], dtype=float32), 'zero_points': array([], dtype=int32), 'quantized_dimension': 0}, 'sparsity_parameters': {}}]\n",
+      "[{'name': 'serving_default_input:0', 'index': 0, 'shape': array([  5,   3, 299, 299]), 'shape_signature': array([ -1,   3, 299, 299]), 'dtype': <class 'numpy.float32'>, 'quantization': (0.0, 0), 'quantization_parameters': {'scales': array([], dtype=float32), 'zero_points': array([], dtype=int32), 'quantized_dimension': 0}, 'sparsity_parameters': {}}]\n",
       "[{'name': 'PartitionedCall:0', 'index': 360, 'shape': array([ 1, 10]), 'shape_signature': array([-1, 10]), 'dtype': <class 'numpy.float32'>, 'quantization': (0.0, 0), 'quantization_parameters': {'scales': array([], dtype=float32), 'zero_points': array([], dtype=int32), 'quantized_dimension': 0}, 'sparsity_parameters': {}}]\n",
-      "[[ 0.67858803  1.2608714  -0.35024315 -0.16926882 -2.035589   -0.63033855\n",
-      "  -0.02604075  0.5862357   1.2443491  -0.75167644]\n",
-      " [ 0.697458    1.2371234  -0.23860058 -0.18017717 -2.0142417  -0.73387134\n",
-      "   0.0772187   0.56821257  1.2372719  -0.7376198 ]\n",
-      " [ 0.6675122   1.1572503  -0.30434915 -0.11979293 -1.9236575  -0.62532455\n",
-      "   0.01296594  0.63798946  1.2443337  -0.831488  ]\n",
-      " [ 0.597822    1.2039295  -0.25822076 -0.17200617 -1.8594054  -0.6334807\n",
-      "   0.03046856  0.55941695  1.0854995  -0.63623714]\n",
-      " [ 0.73488647  1.3504255  -0.36583975 -0.15811163 -2.0982325  -0.6376374\n",
-      "  -0.15020053  0.5475211   1.2973814  -0.8120703 ]]\n"
+      "[[ 0.20618625  0.6512822  -0.22456828 -0.02333656 -1.0345409  -0.35443354\n",
+      "  -0.0610419   0.35702717  0.65950936 -0.386321  ]\n",
+      " [ 0.18873031  0.6354935  -0.23225972  0.00843845 -0.9819105  -0.27088338\n",
+      "  -0.04604215  0.31904203  0.57895863 -0.388857  ]\n",
+      " [ 0.1368683   0.70485806 -0.21472725 -0.00438199 -0.9849346  -0.33788514\n",
+      "   0.01212354  0.36223304  0.53291494 -0.43008518]\n",
+      " [ 0.21859439  0.6477699  -0.22221784  0.01216426 -0.96966094 -0.3585875\n",
+      "  -0.01702444  0.28348124  0.56722623 -0.3970083 ]\n",
+      " [ 0.1918393   0.6760634  -0.19343053 -0.02171362 -1.013835   -0.31794608\n",
+      "  -0.04987581  0.37724382  0.5759724  -0.4063682 ]]\n"
      ]
     }
    ],
@@ -298,17 +317,17 @@
     "interpreter = tf.lite.Interpreter(model_path=\"raw_cnn.tflite\")\n",
     "\n",
     "# Resize input shape for dynamic shape model and allocate tensor\n",
-    "interpreter.resize_tensor_input(interpreter.get_input_details()[0]['index'], [5, 3, 229, 229])\n",
+    "interpreter.resize_tensor_input(interpreter.get_input_details()[0]['index'], [5, 3, 299, 299])\n",
     "interpreter.allocate_tensors()\n",
     "\n",
     "# Get input and output tensors.\n",
     "input_details = interpreter.get_input_details()\n",
     "output_details = interpreter.get_output_details()\n",
     "\n",
-    "print(input_details) # Here we can see the input size has changed to (5, 3, 229, 229) \n",
+    "print(input_details) # Here we can see the input size has changed to (5, 3, 299, 299) \n",
     "print(output_details) # The output has the corresponding changes\n",
     "\n",
-    "input_data = np.array(np.random.random_sample((5, 3, 229, 229)), dtype=np.float32)\n",
+    "input_data = np.array(np.random.random_sample((5, 3, 299, 299)), dtype=np.float32)\n",
     "interpreter.set_tensor(input_details[0]['index'], input_data)\n",
     "interpreter.invoke()\n",
     "\n",
