--- a/conversions/convert_hands_to_onnx_to_tflite.ipynb
+++ b/conversions/convert_hands_to_onnx_to_tflite.ipynb
@@ -503,6 +503,112 @@
     "\n",
     "run_model_and_draw_results(tflite_model_path, image_path)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Converting Model for Pytorch Android deployment\n",
+    "\n",
+    "https://pytorch.org/mobile/android/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ultralytics YOLOv8.0.220 🚀 Python-3.10.8 torch-1.13.1+cu117 CPU (Intel Core(TM) i5-9300H 2.40GHz)\n",
+      "Model summary (fused): 168 layers, 3006038 parameters, 0 gradients, 8.1 GFLOPs\n",
+      "\n",
+      "\u001b[34m\u001b[1mPyTorch:\u001b[0m starting from 'D:\\Programming\\cybertruck\\conversions\\best_hands_detector.pt' with input shape (1, 3, 640, 640) BCHW and output shape(s) (1, 6, 8400) (6.0 MB)\n",
+      "\n",
+      "\u001b[34m\u001b[1mTorchScript:\u001b[0m starting export with torch 1.13.1+cu117...\n",
+      "\u001b[34m\u001b[1mTorchScript:\u001b[0m export success ✅ 3.9s, saved as 'D:\\Programming\\cybertruck\\conversions\\best_hands_detector.torchscript' (11.9 MB)\n",
+      "\n",
+      "Export complete (6.5s)\n",
+      "Results saved to \u001b[1mD:\\Programming\\cybertruck\\conversions\u001b[0m\n",
+      "Predict:         yolo predict task=detect model=D:\\Programming\\cybertruck\\conversions\\best_hands_detector.torchscript imgsz=640  \n",
+      "Validate:        yolo val task=detect model=D:\\Programming\\cybertruck\\conversions\\best_hands_detector.torchscript imgsz=640 data=/home/ron/Classes/CV-Systems/cybertruck/detection/hands_detection/egohands.yaml  \n",
+      "Visualize:       https://netron.app\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'torch' has no attribute 'git'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32md:\\Programming\\cybertruck\\conversions\\convert_hands_to_onnx_to_tflite.ipynb Cell 19\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# x = torch.rand(1, 3, 640, 640)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m model\u001b[39m.\u001b[39mexport(\u001b[39mformat\u001b[39m\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mtorchscript\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m torchscript_model \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mgit\u001b[39m.\u001b[39mload(\u001b[39m'\u001b[39m\u001b[39mbest_hands_detector.torchscript\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39m'''\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mtraced_script_module = torch.jit.trace(model, x)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mtraced_script_module_optimized = optimize_for_mobile(traced_script_module)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39mtraced_script_module_optimized._save_for_lite_interpreter(\"./hands_detector_model.ptl\")\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39m'''\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39m# model(x)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39m# ops = torch.jit.export_opnames(model)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39m# with open('MobileNetV2.yaml', 'w') as output:\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m \u001b[39m#    yaml.dump(ops, output)\u001b[39;00m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'torch' has no attribute 'git'"
+     ]
+    }
+   ],
+   "source": [
+    "import torch, yaml\n",
+    "from ultralytics import YOLO\n",
+    "import torchvision\n",
+    "from torch.utils.mobile_optimizer import optimize_for_mobile\n",
+    "\n",
+    "model = YOLO(r\"D:\\Programming\\cybertruck\\conversions\\best_hands_detector.pt\")  # load a custom trained model\n",
+    "\n",
+    "# x = torch.rand(1, 3, 640, 640)\n",
+    "\n",
+    "model.export(format='torchscript')\n",
+    "\n",
+    "'''\n",
+    "traced_script_module = torch.jit.trace(model, x)\n",
+    "traced_script_module_optimized = optimize_for_mobile(traced_script_module)\n",
+    "traced_script_module_optimized._save_for_lite_interpreter(\"./hands_detector_model.ptl\")\n",
+    "'''\n",
+    "# model(x)\n",
+    "\n",
+    "# ops = torch.jit.export_opnames(model)\n",
+    "# with open('MobileNetV2.yaml', 'w') as output:\n",
+    "#    yaml.dump(ops, output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torchscript_model = torch.jit.load('./best_hands_detector.torchscript')\n",
+    "torchscript_model_optimized = optimize_for_mobile(torchscript_model)\n",
+    "torch.jit.save(torchscript_model_optimized, 'best_hands_detector.ptl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 6, 8400])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torchscript_lite_model = torch.jit.load('./best_hands_detector.torchscript')\n",
+    "\n",
+    "x = torch.rand(1, 3, 640, 640)\n",
+    "\n",
+    "output = torchscript_lite_model(x)\n",
+    "\n",
+    "output.shape"
+   ]
   }
  ],
  "metadata": {
