--- a/conversions/convert_hands_to_onnx_to_tflite.ipynb
+++ b/conversions/convert_hands_to_onnx_to_tflite.ipynb
@@ -508,45 +508,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Converting Model for Pytorch Android deployment\n",
+    "# Converting Model for Pytorch Lite (PTL) Android deployment\n",
     "\n",
-    "https://pytorch.org/mobile/android/"
+    "https://pytorch.org/mobile/android/\n",
+    "\n",
+    "For YOLO detector we use the export function to convert to torchscript, then we convert the torchscript into .ptl for android deployment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ultralytics YOLOv8.0.220 🚀 Python-3.10.8 torch-1.13.1+cu117 CPU (Intel Core(TM) i5-9300H 2.40GHz)\n",
-      "Model summary (fused): 168 layers, 3006038 parameters, 0 gradients, 8.1 GFLOPs\n",
+      "WARNING ⚠️ D:\\Programming\\cybertruck\\conversions\\yolov8n-face.pt appears to require 'omegaconf', which is not in ultralytics requirements.\n",
+      "AutoInstall will run now for 'omegaconf' but this feature will be removed in the future.\n",
+      "Recommend fixes are to train a new model using the latest 'ultralytics' package or to run a command with an official YOLOv8 model, i.e. 'yolo predict model=yolov8n.pt'\n",
+      "\u001b[31m\u001b[1mrequirements:\u001b[0m Ultralytics requirement ['omegaconf'] not found, attempting AutoUpdate...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting omegaconf\n",
+      "  Downloading omegaconf-2.3.0-py3-none-any.whl (79 kB)\n",
+      "     ---------------------------------------- 79.5/79.5 kB 4.3 MB/s eta 0:00:00\n",
+      "Collecting antlr4-python3-runtime==4.9.*\n",
+      "  Downloading antlr4-python3-runtime-4.9.3.tar.gz (117 kB)\n",
+      "     -------------------------------------- 117.0/117.0 kB 6.7 MB/s eta 0:00:00\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'done'\n",
+      "Requirement already satisfied: PyYAML>=5.1.0 in c:\\developer\\python310\\lib\\site-packages (from omegaconf) (6.0)\n",
+      "Building wheels for collected packages: antlr4-python3-runtime\n",
+      "  Building wheel for antlr4-python3-runtime (setup.py): started\n",
+      "  Building wheel for antlr4-python3-runtime (setup.py): finished with status 'done'\n",
+      "  Created wheel for antlr4-python3-runtime: filename=antlr4_python3_runtime-4.9.3-py3-none-any.whl size=144578 sha256=e1ce84fb00db0b0b1b1adefb09f88bc8784d15797dd0e7573bc88fb096bf9b63\n",
+      "  Stored in directory: C:\\Users\\robin\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-i5ch2fs6\\wheels\\48\\6a\\c2\\acb58c7afdf57e4cddf5e1513f5a2d62aa8e98f82a00c76d7c\n",
+      "Successfully built antlr4-python3-runtime\n",
+      "Installing collected packages: antlr4-python3-runtime, omegaconf\n",
+      "Successfully installed antlr4-python3-runtime-4.9.3 omegaconf-2.3.0\n",
       "\n",
-      "\u001b[34m\u001b[1mPyTorch:\u001b[0m starting from 'D:\\Programming\\cybertruck\\conversions\\best_hands_detector.pt' with input shape (1, 3, 640, 640) BCHW and output shape(s) (1, 6, 8400) (6.0 MB)\n",
+      "\u001b[31m\u001b[1mrequirements:\u001b[0m AutoUpdate success ✅ 10.6s, installed 1 package: ['omegaconf']\n",
+      "\u001b[31m\u001b[1mrequirements:\u001b[0m ⚠️ \u001b[1mRestart runtime or rerun command for updates to take effect\u001b[0m\n",
+      "\n",
+      "Ultralytics YOLOv8.0.220 🚀 Python-3.10.8 torch-1.13.1+cu117 CPU (Intel Core(TM) i5-9300H 2.40GHz)\n",
+      "Model summary (fused): 168 layers, 3005843 parameters, 0 gradients, 8.1 GFLOPs\n",
+      "\n",
+      "\u001b[34m\u001b[1mPyTorch:\u001b[0m starting from 'D:\\Programming\\cybertruck\\conversions\\yolov8n-face.pt' with input shape (1, 3, 640, 640) BCHW and output shape(s) (1, 5, 8400) (6.0 MB)\n",
       "\n",
       "\u001b[34m\u001b[1mTorchScript:\u001b[0m starting export with torch 1.13.1+cu117...\n",
-      "\u001b[34m\u001b[1mTorchScript:\u001b[0m export success ✅ 3.9s, saved as 'D:\\Programming\\cybertruck\\conversions\\best_hands_detector.torchscript' (11.9 MB)\n",
+      "\u001b[34m\u001b[1mTorchScript:\u001b[0m export success ✅ 2.8s, saved as 'D:\\Programming\\cybertruck\\conversions\\yolov8n-face.torchscript' (11.9 MB)\n",
       "\n",
-      "Export complete (6.5s)\n",
+      "Export complete (5.4s)\n",
       "Results saved to \u001b[1mD:\\Programming\\cybertruck\\conversions\u001b[0m\n",
-      "Predict:         yolo predict task=detect model=D:\\Programming\\cybertruck\\conversions\\best_hands_detector.torchscript imgsz=640  \n",
-      "Validate:        yolo val task=detect model=D:\\Programming\\cybertruck\\conversions\\best_hands_detector.torchscript imgsz=640 data=/home/ron/Classes/CV-Systems/cybertruck/detection/hands_detection/egohands.yaml  \n",
+      "Predict:         yolo predict task=detect model=D:\\Programming\\cybertruck\\conversions\\yolov8n-face.torchscript imgsz=640  \n",
+      "Validate:        yolo val task=detect model=D:\\Programming\\cybertruck\\conversions\\yolov8n-face.torchscript imgsz=640 data=datasets/data.yaml  \n",
       "Visualize:       https://netron.app\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "module 'torch' has no attribute 'git'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32md:\\Programming\\cybertruck\\conversions\\convert_hands_to_onnx_to_tflite.ipynb Cell 19\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# x = torch.rand(1, 3, 640, 640)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m model\u001b[39m.\u001b[39mexport(\u001b[39mformat\u001b[39m\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mtorchscript\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m torchscript_model \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mgit\u001b[39m.\u001b[39mload(\u001b[39m'\u001b[39m\u001b[39mbest_hands_detector.torchscript\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39m'''\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mtraced_script_module = torch.jit.trace(model, x)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mtraced_script_module_optimized = optimize_for_mobile(traced_script_module)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39mtraced_script_module_optimized._save_for_lite_interpreter(\"./hands_detector_model.ptl\")\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39m'''\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39m# model(x)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39m# ops = torch.jit.export_opnames(model)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39m# with open('MobileNetV2.yaml', 'w') as output:\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Programming/cybertruck/conversions/convert_hands_to_onnx_to_tflite.ipynb#X24sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m \u001b[39m#    yaml.dump(ops, output)\u001b[39;00m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'torch' has no attribute 'git'"
-     ]
+     "data": {
+      "text/plain": [
+       "'D:\\\\Programming\\\\cybertruck\\\\conversions\\\\yolov8n-face.torchscript'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -557,36 +589,27 @@
     "\n",
     "model = YOLO(r\"D:\\Programming\\cybertruck\\conversions\\best_hands_detector.pt\")  # load a custom trained model\n",
     "\n",
-    "# x = torch.rand(1, 3, 640, 640)\n",
-    "\n",
-    "model.export(format='torchscript')\n",
-    "\n",
-    "'''\n",
-    "traced_script_module = torch.jit.trace(model, x)\n",
-    "traced_script_module_optimized = optimize_for_mobile(traced_script_module)\n",
-    "traced_script_module_optimized._save_for_lite_interpreter(\"./hands_detector_model.ptl\")\n",
-    "'''\n",
-    "# model(x)\n",
-    "\n",
-    "# ops = torch.jit.export_opnames(model)\n",
-    "# with open('MobileNetV2.yaml', 'w') as output:\n",
-    "#    yaml.dump(ops, output)"
+    "model.export(format='torchscript')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "torchscript_model = torch.jit.load('./best_hands_detector.torchscript')\n",
     "torchscript_model_optimized = optimize_for_mobile(torchscript_model)\n",
-    "torch.jit.save(torchscript_model_optimized, 'best_hands_detector.ptl')"
+    "torchscript_model_optimized.eval()\n",
+    "\n",
+    "\n",
+    "scripted_module = torch.jit.script(torchscript_model_optimized)\n",
+    "scripted_module._save_for_lite_interpreter(\"./best_hands_detector.ptl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -595,19 +618,57 @@
        "torch.Size([1, 6, 8400])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torchscript_lite_model = torch.jit.load('./best_hands_detector.torchscript')\n",
+    "torchscript_lite_model = torch.jit.load('./best_hands_detector.ptl')\n",
+    "torchscript_lite_model.eval()\n",
     "\n",
     "x = torch.rand(1, 3, 640, 640)\n",
     "\n",
     "output = torchscript_lite_model(x)\n",
     "\n",
     "output.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Converting CNNs to Pytorch Lite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"D:\\Programming\\cybertruck\")\n",
+    "\n",
+    "from cnn.raw_cnn import Raw_CNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_model = Raw_CNN(None).to('cuda')\n",
+    "x = torch.randn(5, 3, 299, 299).to('cuda')\n",
+    "raw_model.load_state_dict(torch.load(r\"D:\\Programming\\cybertruck\\weights\\raw\\epoch20_11-27_16_15_10_76acc.pt\"))\n",
+    "raw_model.eval()\n",
+    "\n",
+    "\n",
+    "scripted_module = torch.jit.script(raw_model)\n",
+    "torchscript_model_optimized = optimize_for_mobile(scripted_module)\n",
+    "# Export lite interpreter version model (compatible with lite interpreter)\n",
+    "scripted_module._save_for_lite_interpreter(\"RAW_CNN.ptl\")"
    ]
   }
  ],
