Organized files a bit and updated README

--- a/conversions/convert_face_to_onnx_to_tflite.ipynb
+++ b/conversions/convert_face_to_onnx_to_tflite.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = 'hands_cnn'"
+    "model_name = 'face_cnn'"
    ]
   },
   {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -334,27 +334,27 @@
      "output_type": "stream",
      "text": [
       "Ultralytics YOLOv8.0.208 🚀 Python-3.10.13 torch-2.1.0+cu121 CPU (12th Gen Intel Core(TM) i7-12700H)\n",
-      "Model summary (fused): 168 layers, 3006038 parameters, 0 gradients, 8.1 GFLOPs\n",
+      "Model summary (fused): 168 layers, 3005843 parameters, 0 gradients, 8.1 GFLOPs\n",
       "\n",
-      "\u001b[34m\u001b[1mPyTorch:\u001b[0m starting from '/home/ron/Classes/CV-Systems/cybertruck/detection/hands_detection/runs/detect/best/weights/best.pt' with input shape (1, 3, 640, 640) BCHW and output shape(s) (1, 6, 8400) (6.0 MB)\n",
+      "\u001b[34m\u001b[1mPyTorch:\u001b[0m starting from '/home/ron/Classes/CV-Systems/cybertruck/detection/face_detection/weights/yolov8n-face.pt' with input shape (1, 3, 640, 640) BCHW and output shape(s) (1, 5, 8400) (6.0 MB)\n",
       "\n",
       "\u001b[34m\u001b[1mTorchScript:\u001b[0m starting export with torch 2.1.0+cu121...\n",
-      "\u001b[34m\u001b[1mTorchScript:\u001b[0m export success ✅ 0.8s, saved as '/home/ron/Classes/CV-Systems/cybertruck/detection/hands_detection/runs/detect/best/weights/best.torchscript' (11.9 MB)\n",
+      "\u001b[34m\u001b[1mTorchScript:\u001b[0m export success ✅ 0.8s, saved as '/home/ron/Classes/CV-Systems/cybertruck/detection/face_detection/weights/yolov8n-face.torchscript' (11.9 MB)\n",
       "\n",
       "Export complete (2.2s)\n",
-      "Results saved to \u001b[1m/home/ron/Classes/CV-Systems/cybertruck/detection/hands_detection/runs/detect/best/weights\u001b[0m\n",
-      "Predict:         yolo predict task=detect model=/home/ron/Classes/CV-Systems/cybertruck/detection/hands_detection/runs/detect/best/weights/best.torchscript imgsz=640  \n",
-      "Validate:        yolo val task=detect model=/home/ron/Classes/CV-Systems/cybertruck/detection/hands_detection/runs/detect/best/weights/best.torchscript imgsz=640 data=/home/ron/Classes/CV-Systems/cybertruck/detection/hands_detection/egohands.yaml  \n",
+      "Results saved to \u001b[1m/home/ron/Classes/CV-Systems/cybertruck/detection/face_detection/weights\u001b[0m\n",
+      "Predict:         yolo predict task=detect model=/home/ron/Classes/CV-Systems/cybertruck/detection/face_detection/weights/yolov8n-face.torchscript imgsz=640  \n",
+      "Validate:        yolo val task=detect model=/home/ron/Classes/CV-Systems/cybertruck/detection/face_detection/weights/yolov8n-face.torchscript imgsz=640 data=datasets/data.yaml  \n",
       "Visualize:       https://netron.app\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'/home/ron/Classes/CV-Systems/cybertruck/detection/hands_detection/runs/detect/best/weights/best.torchscript'"
+       "'/home/ron/Classes/CV-Systems/cybertruck/detection/face_detection/weights/yolov8n-face.torchscript'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,31 +365,42 @@
     "import torchvision\n",
     "from torch.utils.mobile_optimizer import optimize_for_mobile\n",
     "\n",
-    "model = YOLO(r\"/home/ron/Classes/CV-Systems/cybertruck/detection/hands_detection/runs/detect/best/weights/best.pt\")  # load a custom trained model\n",
+    "model = YOLO(r\"/home/ron/Classes/CV-Systems/cybertruck/detection/face_detection/weights/yolov8n-face.pt\")  # load a custom trained model\n",
     "\n",
     "model.export(format='torchscript')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "torchscript_model = torch.jit.load('/home/ron/Classes/CV-Systems/cybertruck/detection/hands_detection/runs/detect/best/weights/best.torchscript')\n",
+    "torchscript_model = torch.jit.load('/home/ron/Classes/CV-Systems/cybertruck/detection/face_detection/weights/yolov8n-face.torchscript')\n",
     "torchscript_model_optimized = optimize_for_mobile(torchscript_model)\n",
     "torchscript_model_optimized.eval()\n",
     "\n",
     "\n",
     "scripted_module = torch.jit.script(torchscript_model_optimized)\n",
-    "scripted_module._save_for_lite_interpreter(\"./best_hands_detector.ptl\")"
+    "scripted_module._save_for_lite_interpreter(\"./best_face_detector.ptl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 6, 8400])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "torchscript_lite_model = torch.jit.load('./best_hands_detector.ptl')\n",
     "torchscript_lite_model.eval()\n",
@@ -410,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +434,7 @@
     "root_dir = '/'.join(os.getcwd().split('/')[:-1])\n",
     "sys.path.append(root_dir)\n",
     "\n",
-    "from cnn.hands_cnn import Hands_VGG16"
+    "from cnn.face_cnn import Face_CNN"
    ]
   },
   {
@@ -432,31 +443,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class HandArgs:\n",
-    "    def __init__(self):\n",
-    "        self.freeze = True\n",
-    "        self.num_frozen_params = 30\n",
-    "        self.dropout = 0.35\n",
+    "# class HandArgs:\n",
+    "#     def __init__(self):\n",
+    "#         self.freeze = True\n",
+    "#         self.num_frozen_params = 30\n",
+    "#         self.dropout = 0.35\n",
     "\n",
-    "hand_args = HandArgs()"
+    "# hand_args = HandArgs()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ron/miniconda3/envs/cyber/lib/python3.10/site-packages/timm/models/_factory.py:117: UserWarning: Mapping deprecated model name xception to current legacy_xception.\n",
+      "  model = create_fn(\n"
+     ]
+    }
+   ],
    "source": [
-    "hands_model = Hands_VGG16(hand_args).to('cuda')\n",
-    "x = torch.randn(5, 3, 224, 224).to('cuda')\n",
-    "hands_model.load_state_dict(torch.load(r\"/home/ron/Classes/CV-Systems/cybertruck/cnn/hands_models/vgg/epoch60_11-16_03:44:44.pt\"))\n",
-    "hands_model.eval()\n",
+    "face_model = Face_CNN(None).to('cuda')\n",
+    "x = torch.randn(5, 3, 299, 299).to('cuda')\n",
+    "face_model.load_state_dict(torch.load(r\"/home/ron/Classes/CV-Systems/cybertruck/cnn/face_models/face/SGD/epoch10_11-28_10:50:06_66acc.pt\"))\n",
+    "face_model.eval()\n",
     "\n",
     "\n",
-    "scripted_module = torch.jit.script(hands_model)\n",
+    "scripted_module = torch.jit.script(face_model)\n",
     "torchscript_model_optimized = optimize_for_mobile(scripted_module)\n",
     "# Export lite interpreter version model (compatible with lite interpreter)\n",
-    "scripted_module._save_for_lite_interpreter(\"Hands_CNN.ptl\")"
+    "scripted_module._save_for_lite_interpreter(\"Face_CNN.ptl\")"
    ]
   },
   {
