--- a/conversions/convert_raw_to_onnx_to_tflite.ipynb
+++ b/conversions/convert_raw_to_onnx_to_tflite.ipynb
@@ -192,13 +192,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ron/miniconda3/envs/cyber/lib/python3.10/site-packages/timm/models/_factory.py:117: UserWarning: Mapping deprecated model name xception to current legacy_xception.\n",
+      "  model = create_fn(\n"
+     ]
+    }
+   ],
    "source": [
     "raw_model = Raw_CNN(None).to('cuda')\n",
     "x = torch.randn(5, 3, 299, 299).to('cuda')\n",
-    "raw_model.load_state_dict(torch.load(r\"D:\\Programming\\cybertruck\\weights\\raw\\epoch20_11-27_16_15_10_76acc.pt\"))\n",
+    "raw_model.load_state_dict(torch.load(r\"/home/ron/Classes/CV-Systems/cybertruck/cnn/raw_models/raw/SGD/epoch20_11-27_16:15:10_76acc.pt\"))\n",
     "raw_model.eval()\n",
     "\n",
     "\n",
